# Spawn_4_wheel_bot

./: CMakeLists.txt  LICENSE  Lidar_1.stl  base_link.stl  check.rviz  left_back_1.stl  left_front_1.stl  package.xml  right_back_1.stl  right_front_1.stl  spawn_4_wheel_bot_README.md  urdf.launch.py  zayn_bot.gazebo  zayn_bot.urdf
